# DistAlgo

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  setup.cfg
deploy/: docker-compose.yaml
deploy/kuberay/: raycluster-gpu.yaml  raycluster.yaml
deploy/kubernetes/: distalgo-service.yaml  minio.yaml
deploy/observability/: prometheus-config.yaml
deploy/volcano-vgpu/: README.md  namespace.yaml  vcjob-vgpu-gang.yaml  vcjob-vgpu-insufficient.yaml  vgpu-pod.yaml
docs/: algorithms.md  architecture.md  gpu-validation.md  gpu-virtualization-volcano-hami.md  validation-report.md
docs/superpowers/plans/: 2026-07-06-cloud-native-distributed-algorithm-framework.md
examples/: louvain_job.json  pagerank_job.json  sssp_job.json
scripts/: fix_remote_k3s_kuberay.sh  gpu_kernel_smoke.py  import_remote_image_to_k3s.sh  install_remote_kuberay.sh  minio_service_smoke.py  probe_gpu.py  remote_cluster_status.sh  remote_gpu_ray_smoke.sh  remote_minio_k3s_smoke.sh  remote_volcano_vgpu_preflight.sh  remote_volcano_vgpu_smoke.sh  stress_benchmark.py
src/distalgo/: __init__.py  cli.py
src/distalgo/algorithms/: __init__.py  base.py  registry.py
src/distalgo/backends/: __init__.py  accelerated.py  (+5 more)
tests/: test_accelerated_kernels.py  test_algorithms.py  test_capabilities.py  test_core_runtime.py  test_distributed_algorithms.py  test_distributed_completion.py  test_final_completion.py  test_gpu_backend.py  test_minio_client.py  test_mvp_completion.py  test_project_completion.py  test_ray_actor_runtime.py  test_service_features.py  test_stress_benchmark.py
(+33 files in other folders)
