[metadata]
name = distalgo
version = 0.1.0
description = Distributed graph and machine learning algorithm execution framework with cloud-native deployment support.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    distalgo = distalgo.cli:main
